# bqniser

./: 0-AI-MANIFEST.a2ml  CHANGELOG.adoc  CHANGELOG.md  Cargo.toml  EXPLAINME.adoc  Justfile  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  README.md  ROADMAP.adoc  SECURITY.md  TEST-NEEDS.md  TOPOLOGY.md  eclexiaiser.toml  k9iser.toml  llm-warmup-dev.md  llm-warmup-user.md  selur-compose.toml  setup.sh  stapeln.toml
.claude/: CLAUDE.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  custom.yml  documentation.yml  feature_request.yml  question.yml
.machine_readable/: ADJUST.contractile  CLADE.a2ml  INTENT.contractile  MUST.contractile  TRUST.contractile
.machine_readable/6a2/: AGENTIC.a2ml  ECOSYSTEM.a2ml  META.a2ml  NEUROSYM.a2ml  PLAYBOOK.a2ml  STATE.a2ml
.machine_readable/6a2/anchor/: ANCHOR.a2ml
.machine_readable/ai/: PLACEHOLDERS.adoc
.machine_readable/anchors/: ANCHOR.a2ml
.machine_readable/configs/git-cliff/: cliff.toml
.machine_readable/contractiles/dust/: Dustfile.a2ml
.machine_readable/contractiles/intend/: Intendfile.a2ml
.well-known/: security.txt
container/: manifest.toml
contractiles/intend/: Intentfile.a2ml
contractiles/must/: Mustfile.a2ml
contractiles/trust/: Trustfile.a2ml
docs/architecture/: TOPOLOGY.md
examples/array-ops/: bqniser.toml
src/: lib.rs  main.rs
src/abi/: mod.rs
src/codegen/: bqn_gen.rs  ffi_gen.rs  mod.rs  parser.rs
src/interface/abi/: Foreign.idr  (+3 more)
src/manifest/: mod.rs
tests/: integration_test.rs
(+13 files in other folders)
