# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "bqniser"
version = "0.1.0"
edition = "2024"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
description = "Detect array operation patterns in existing code and rewrite as optimised BQN array primitives"
license-file = "LICENSE"
repository = "https://github.com/hyperpolymath/bqniser"
keywords = ["bqn", "apl", "array-programming", "optimisation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
thiserror = "2"
handlebars = "6"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
